syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "FollowerProto";
option java_package = "com.xircle.followservice.application.grpc.proto";

package com.xircle.followservice;

message GetFollowerRequest {
  int64 userId = 1;
}

message GetFollowerResponse {
  repeated int64 userId = 1;
}

service GetFollowerService {
  rpc GetFollowerCall (GetFollowerRequest) returns (GetFollowerResponse) {}
}